feat: add root customer portal api
